tests/rust_data/rocket/core/codegen/tests/ui-fail-nightly/from_form_type_errors.stderr
error[E0277]: the trait bound `Unknown: FromFormField<'_>` is not satisfied
 --> tests/ui-fail-nightly/from_form_type_errors.rs:7:12
  |
7 |     field: Unknown,
  |            ^^^^^^^ the trait `FromFormField<'_>` is not implemented for `Unknown`
  |
  = help: the following other types implement trait `FromFormField<'v>`:
            bool
            isize
            i8
            i16
            i32
            i64
            i128
            usize
          and $N others
  = note: required for `Unknown` to implement `FromForm<'r>`

error[E0277]: the trait bound `Foo<usize>: FromFormField<'_>` is not satisfied
  --> tests/ui-fail-nightly/from_form_type_errors.rs:14:12
   |
14 |     field: Foo<usize>,
   |            ^^^^^^^^^^ the trait `FromFormField<'_>` is not implemented for `Foo<usize>`
   |
   = help: the following other types implement trait `FromFormField<'v>`:
             bool
             isize
             i8
             i16
             i32
             i64
             i128
             usize
           and $N others
   = note: required for `Foo<usize>` to implement `FromForm<'r>`
